chore(tsconfig): Restrict TypeScript to form component only.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
     "types": ["vite/client"],
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true
-  },
-  "include": ["src/components/form"]
+  }
+  // "include": ["src/components/form"]
 }
