chore(setup): further improvements on template configuration.

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -7,12 +7,7 @@
   "packageRules": [
     {
       "groupName": "React Ecosystem",
-      "matchPackageNames": [
-        "react",
-        "react-dom",
-        "@types/react",
-        "@types/react-dom"
-      ],
+      "matchPackageNames": ["react", "react-dom", "@types/react", "@types/react-dom"],
       "automerge": false,
       "updateTypes": ["minor", "patch"]
     },
