--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
   },
   "dependencies": {
     "next": "15.2.3",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.0.15",
     "@types/node": "^20.17.25",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -38,7 +39,7 @@
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "sort-package-json": "^3.0.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.0.15",
     "typescript": "^5"
   }
 }
