--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     ]
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "next": "15.2.3",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
