--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.1.3",
     "@types/node": "^20.17.30",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.1.1",
     "@types/react-dom": "^19.1.2",
     "eslint": "^9.24.0",
