--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "nodemailer": "^6.10.0",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
