--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "gsap": "^3.12.7",
     "next": "15.2.4",
     "nodemailer": "^6.10.0",
     "postcss": "^8.5.3",
