--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "gsap": "^3.12.7",
     "next": "15.2.4",
+    "next-intl": "^4.1.0",
     "nodemailer": "^6.10.0",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
