--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
+    "lint:check": "prettier --check .",
+    "lint:fix": "prettier --write .",
     "prepare": "husky",
     "start": "next start"
   },
